force-app/main/default/objects/Production__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the production, Provides a high level overview</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>