force-app/main/default/objects/Production__c/fields/Estimated_Budget__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Budget__c</fullName>
    <label>Estimated Budget</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>