force-app/main/default/objects/Production__c/fields/Fun_Facts__c.field-meta.xml
<CustomField>
    <fullName>Fun_Facts__c</fullName>
    <label>Fun Facts</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>