force-app/main/default/objects/Production__c/fields/iMDb_URL__c.field-meta.xml
<CustomField>
    <fullName>iMDb_URL__c</fullName>
    <description>This field contains the web address on iMDb for the Production</description>
    <label>iMDb URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>