force-app/main/default/objects/Production__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>Year that the production was initially released</description>
    <inlineHelpText>The calender year that the production was originally released</inlineHelpText>
    <label>Year</label>
    <type>Date</type>
</CustomField>